# loose-sqlparser-rs

./: .env.sh  Cargo.toml  LICENSE  README.md
.github/workflows/: coverage.yml
benches/: sqlparser.rs
examples/: cli.rs
src/: lib.rs  options.rs  scanner.rs  statement.rs  tokenizer.rs  tokens.rs
