[package]
name = "loose-sqlparser"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/squill-app/loose-sqlparser-rs"
keywords = [
    "database",
    "postgres",
    "postgresql",
    "sqlite",
    "duckdb",
    "mysql",
    "mariadb",
    "sqlite",
    "sql",
    "parser",
]
categories = ["database"]
authors = ["Philippe Shampanier <pshampanier@gmail.com>"]

[dev-dependencies]
terminal_size = "0.3.0"
criterion = { version = "0.5.1", features = ["html_reports"] }
sqlparser = "0.50"

[[bench]]
name = "sqlparser"
harness = false